--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@nx-dynamic-mf/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start:dashboard": "nx serve dashboard"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~16.0.0",
