--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@nx-dynamic-mf/login/login-form": ["libs/login/login-form/src/index.ts"],
       "@nx-dynamic-mf/shared/data-access-user": [
         "libs/shared/data-access-user/src/index.ts"
       ]
