--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start:dashboard": "nx serve dashboard"
+    "start:dashboard": "nx serve dashboard",
+    "serve:login": "nx serve login"
   },
   "private": true,
   "dependencies": {
