--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "license": "MIT",
   "scripts": {
     "start:dashboard": "nx serve dashboard",
-    "serve:login": "nx serve login"
+    "serve:dashboard": "nx serve dashboard --devRemotes=login",
+    "serve:login": "nx serve login",
+    "graph": "nx graph"
   },
   "private": true,
   "dependencies": {
