--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start:dashboard": "nx serve dashboard",
     "serve:dashboard": "nx serve dashboard --devRemotes=login",
+    "serve:employee": "nx serve employee --devRemotes=login",
     "serve:login": "nx serve login",
     "graph": "nx graph"
   },
